--- a/.github/workflows/receiver.yaml
+++ b/.github/workflows/receiver.yaml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: "Pull desired image"
         run: |
           echo ${{ github.event.client_payload.image_hash }}
